fix issue with contrasting colors on navbar leading to possible accesibility issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,11 +82,11 @@
 }
 
 .navbar-links li:hover {
-    background-color: #cea716;
+    background-color: #5F634F;
 }
 
 .active {
-    background-color: #cea716;
+    background-color: #847655;
 }
 
 
